--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,31 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>QuantuMoonLight</title>
     <link rel="icon" href="../static/images/logos/logo.ico">
     <!-- Stylesheets -->
     <link href="../static/styles/css/revolution-slider.css" rel="stylesheet">
-    <link href="../static/styles/css/style.css" rel="stylesheet">
+    <link href="../static/styles/css/blog.css" rel="stylesheet">
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href="../static/styles/css/responsive.css" rel="stylesheet">
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <!--[if lt IE 9]>
     <script src="../../static/js/respond.js"></script>
     <script src="../static/js/script.js"></script><![endif]-->
-    <link href="../static/styles/css/nav.css" rel="stylesheet">
+
 </head>
 <body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<style>
+    #postBut{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        width: 100%;
+
+    }
+
+    #sortTab{
+        margin-left: 0em;
+        margin-right: auto;
+        width: 100%;
+        margin-top: 1em;
+        margin-bottom: auto;
+        text-align: center;
+        align-items: center;
+
+    }
+
+    #btnSort{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1em;
+        margin-bottom: auto;
+    }
+
+    .sorting{
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+        margin-left: 1em;
+        margin-right: 1em;
+        border : 4px solid transparent;
+        border-radius: 20px;
+        background: linear-gradient(to right, white,white),
+                    linear-gradient(to right,darkblue,blueviolet);
+        background-clip: padding-box,border-box;
+        background-origin: padding-box,border-box;
+
+    }
+
+</style>
+
+
+<script src="https://kit.fontawesome.com/b0f51da084.js" crossorigin="anonymous"></script>
 {% extends "base.html" %}
 {% block content %}
-    <br>
-    <center><img src="../static/images/icons/uc.jpg"></center>
-    <br>
- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div class="colonna">
+<div align="center">
+    <h1 id="blog_title">QUANTUM COMMUNITY</h1>
+    <p>Immerse yourself in the quantum community, you can share your experiments and stay update on new topics</p>
+</div>
+
+<div class="create_post">
+    <form action="{{url_for("add")}}">
+        <button id="postBut" class="btn" type="submit">Create New Post</button>
+    </form>
+</div>
+
+
+<div>
+        <table id="sortTab">
+            <thead>
+              <tr>
+                <td>
+                    <a href="{{ url_for('blog', label='Experiment') }}"> <button id="btnSort" class="btn d-flex align-items-center" >EXPERIMENT</button> </a>
+                </td>
+                <td>
+                    <a href="{{ url_for('blog', label='Article') }}"> <button id="btnSort" class="btn d-flex align-items-center"> ARTICLE</button> </a>
+                </td>
+                  <td>
+                    <a href="{{ url_for('blog', label='likes') }}"> <button id="btnSort" class="btn d-flex align-items-center" > MOST LIKED</button> </a>
+                </td>
+                <td>
+                    <a href="{{ url_for('blog') }}"> <button id="btnSort" class="btn d-flex align-items-center"> NEWEST</button> </a>
+                </td>
+              </tr>
+            </thead>
+        </table>
+</div>
+
+
+
+{% for Article in posts %}
+{% if not Article.authorized and current_user.username == Article.author %}
+
+<div class="post-preview">
+    <a href="{{ url_for('post', post_id=Article.id) }}">
+        <div align="right">
+            <span class="post-label label-primary">{{Article.label}} </span>
+        </div>
+        <h2 class="post-title">
+            {{ Article.title }} </h2>
+        <h5>Post pending approval </h5>
+    <p class="post-meta">Posted by <b>{{ Article.author }}</b> on {{ Article.data.strftime('%B %d, %Y') }} </p>
+    </a>
+</div>
+
+        {% endif %}
+{% if Article.authorized %}
+<br>
+
+<div class="post-preview">
+
+    <a href="{{ url_for('post', post_id=Article.id) }}">
+        <div align="right">
+            {% if Article.label == "Article" %}
+            <span class="post-label label-primary-art">{{Article.label}} </span>
+            {% endif %}
+            {% if Article.label == "Experiment" %}
+                <span class="post-label label-primary-exp">{{Article.label}} </span>
+            {% endif %}
+        </div>
+        <h2 class="post-title">
+            {{ Article.title }} </h2>
+    <p class="post-meta">Posted by <b>{{ Article.author }}</b> on {{ Article.data.strftime('%B %d, %Y') }} </p>
+
+    </a>
+    <!--<button onclick="Toggle1()" id="btnh1" class="btn-like" ><i class="fa-solid fa-heart"></i>-->
+    <div align="right">
+    {% if current_user.is_authenticated %}
+     {% if current_user.has_liked_post(Article)  %}
+    <Button id={{Article.id}} onclick="Toggle1({{Article.id}})" class="btn-like" style="color:red"><i class="fa-solid fa-rocket" ></i>
+    </Button>
+    {{ Article.likes.count()}}
+     {% else %}
+    <Button id={{Article.id}} onclick="Toggle1({{Article.id}})" class="btn-like" style="color:grey"><i class="fa-solid fa-rocket"></i>
+    </Button>
+    {{ Article.likes.count()}}
+    {% endif %}
+
+     {% else %}
+    <Button id={{Article.id}} onclick=ShowMessage() class="btn-like" style="color:grey"><i class="fa-solid fa-rocket"></i>
+    </Button>
+   {{ Article.likes.count()}}
+    {% endif %}
+    </div>
+</div>
+
+
+
+<script>
+
+
+    function Toggle1(intValue) {
+        var btnvar1 = document.getElementById(intValue);
+        if (btnvar1.style.color === "red") {
+            btnvar1.style.color = "grey"
+            $.ajax({
+                type: 'GET',
+                url: "{{url_for("like",action=0)}}",
+                data: {'data': JSON.stringify(intValue)},
+                contentType: "application/json",
+                dataType: 'json'
+            });
+        } else {
+            btnvar1.style.color = "red"
+            $.ajax({
+                type: 'GET',
+                url: "{{url_for("like",action=1)}}",
+                data: {'data': JSON.stringify(intValue)},
+                contentType: "application/json",
+                dataType: 'json'
+            });
+        }
+    }
+
+
+        function ShowMessage() {
+       alert("you need to be logged in to like an article");
+
+    }
+
+
+
+
+</script>
+
+{% endif %}
+{% endfor %}
+</div>
+<br>
+
 {% endblock %}
+
+
 </body>
 </html>
