--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link" href={{url_for("homepage")}}>HOME</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href={{url_for("getStarted")}}>GET STARTED</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href={{url_for("formPage")}}>QUANTUM ML</a>
         </li>
